environments/prod/patches/set-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morphic-community-v09
spec:
  # also bump up replicas
  replicas: 2

  template:
    spec:
      containers:
      - name: morphic-community-v09
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: morphic-community-v10
spec:
  template:
    spec:
      containers:
      - name: morphic-community-v10
